--- a/src/App.css
+++ b/src/App.css
@@ -6,17 +6,59 @@
   height: 40vmin;
 }
 
-.App-header {
-  background-color: #282c34;
+.Thank{
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+.carrrd{
+  width: 25rem ;
+  opacity: 0.8;
+  position: relative;
+  left: 60vw;
+  top: 40vh;
+}
+
+.Abuu{
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  position: relative;
+  top: 450px;
+  border-radius: 50px;
+  left: 760px;
+  width: 550px;
+  opacity:0.2;
+  height: 200px;
+  /* align-items: center;
+  justify-content: center; */
+
+  color: black;
+
+}
+.App-header {
+  /* background-color: #282c34; */
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  top: 430px;
+  right: -350px;
+  /* align-items: center;
+  justify-content: center; */
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .App-link {
   color: #09d3ac;
 }
+
+.Firstpage{
+  background-image: url(https://i.loli.net/2019/11/18/RkLIo5Wnh8VO2bF.gif);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
