--- a/src/App.css
+++ b/src/App.css
@@ -72,3 +72,8 @@
   top: 100px;
   right: -350px;
 }
+
+.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+  background-color: #8064A2 !important;
+  border-color: #8064A2 ;
+}
